<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:orientation="vertical">
            <!---->
            <!---->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">
                <!---->
                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Change_Password" />
                <!---->
                <EditText
                    android:id="@+id/edtOldPassword"
                    style="@style/heading_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/profile_edt_bg"
                    android:hint="@string/Enter_Old_Password"
                    android:padding="10dp" />
                <!---->
            </LinearLayout>
            <!---->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">
                <!---->
                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/New_Password" />
                <!---->
                <EditText
                    android:id="@+id/edtNewPassword"
                    style="@style/heading_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/profile_edt_bg"
                    android:hint="@string/Enter_New_Password"
                    android:padding="10dp" />
                <!---->
            </LinearLayout>
            <!---->
            <!---->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">
                <!---->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Deactivate_Account"
                    android:textColor="#FF2C2C"
                    android:textSize="@dimen/_16sdp" />
                <!---->
            </LinearLayout>
        </LinearLayout>
        <!---->
        <!---->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

</RelativeLayout>

