<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    tools:context=".fragment.ProfileSettingLifestyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Smoking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/profile_edt_bg"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spnSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:dropDownVerticalOffset="40dp"
                    android:gravity="right"
                    android:popupBackground="@color/action_mode_color"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alchol" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/profile_edt_bg"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spnAlcohol"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:dropDownVerticalOffset="40dp"
                    android:gravity="right"
                    android:popupBackground="@color/action_mode_color"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Workout_level" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/profile_edt_bg"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spnWorkoutLevel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:dropDownVerticalOffset="40dp"
                    android:gravity="right"
                    android:popupBackground="@color/action_mode_color"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sports_involvement" />

            <EditText
                android:id="@+id/edtSportInvolvement"
                style="@style/Profile_setting_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/Sports_involvement" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

</RelativeLayout>